zokrates_cli/examples/compile_errors/unpack_value_too_large.zok
from "EMBED" import unpack;

def main() {
    bool[2] bits = unpack(4); // we need 3 bits to unpack 4
    return;
}
